--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,16 @@ main {
         margin-top: 19px;
 }
 
+.circleboots {
+    width: 19px;
+    height: 19px;
+    border-radius: 25px;
+    background: #F16D7F;
+    position: absolute;
+    margin-left: 1342px;
+    margin-top: 21px;
+}
+
 .circle_number {
     color: white;
     text-align: center;
@@ -280,6 +290,8 @@ button:active, button:focus {
 
 .selection_addcart {
    height: 1192px;
+   width: 1140px;
+   margin: 0 auto;
     display: flex;
     margin-left: 240px;
     margin-right: 240px;
@@ -289,6 +301,7 @@ button:active, button:focus {
     list-style-type: none;
     justify-content: space-between;
     position: relative;
+    
 }
 
 .text_ellery {
@@ -428,6 +441,7 @@ button:active, button:focus {
     margin-top: 103px;
     margin-right: 230px;
     text-align: center;
+    width: 1140px;
 }
 
 .selection-icons-container_item-title {
@@ -480,29 +494,36 @@ button:active, button:focus {
 
 .square-white {
     width: 31px;
-    height: 22px;
+    height: 31px;
     background: white;
     text-align: center;
     vertical-align: middle;
-    padding-top: 9px;
+    
+}
+
+.square-white  svg {
+   margin-top: 10px;
+}
+
+.square-pink  svg {
+    padding-top: 10px;
 }
 
 .square-pink {
     width: 31px;
-    height: 22px;
+    height: 31px;
     background: #F16D7F;
     text-align: center;
-    padding-top: 9px;
-    
-
+    vertical-align: middle;
 }
+
 
 .icons-footer {
     display: flex;
     justify-content: space-between;
     width: 145px;
     position: absolute;
-    padding-left: 655px;
+    margin-left: 655px;
     margin-top: -11px;
 }
 
@@ -786,18 +807,158 @@ button:active, button:focus {
           }
 
           .container-block_information {
-              background-color: yellowgreen;
               width: 360px;
-              height: 690px;
+              height: 400px;
               float:right;
               
           }
 
+         .container-block_information-forms {
+             width: 360px;
+             height: 175px;
+         }
+
+         .container-block_information-forms ::placeholder{
+             color: #222222;
+             font-size: 13px;
+         }
+
+         .container-block_information-form-Bang ::placeholder {
+             color: #B1B1B1;
+             font-size: 13px;
+
+         }
+
+         .container-block_information-form input{
+            width: 337px;
+            height: 45px;
+            border: 1px solid #A4A4A4;  
+            margin-top: 21px;      
+         }
+
+         .cart_forms-button {
+             width: 100px;
+             height: 34px;
+             border: 1px solid #A4A4A4;
+             background-color: transparent;
+
+             margin-top: 24px;
+
+             text-transform: uppercase;
+             font-size: 11px;
+         }
+
+         .container-block-information-cart-button {
+             width: 273px;
+             height: 50px;
+             background-color: #F16D7F;
+             border: none;
+
+             margin-top: 39px;
+             margin-left: 44px;
+
+             text-transform: uppercase;
+             font-size: 16px;
+             color: white;
+         }
+
           .container-block_carts {
-              background-color: red;
               width: 652px;
               height: 690px;
+              float: left;
           }
+
+          .container-block_carts-inheat {
+              width: 652px;
+              height: 306px;
+              box-shadow: 0.4em 0.4em 5px rgba(122,122,122,0.5);
+
+              display: flex;
+              justify-content: space-between;
+          }
+
+          .container-block_carts-inheat-text, .container-block_carts-stripped-text{
+            width: 200px;
+            height: 250px;
+            padding-right: 150px;
+            padding-top: 22px;
+
+          }
+
+          .container-block_carts-inheat-title {
+              text-transform: uppercase;
+              font-size: 24px;
+              font-weight: 400;
+              line-height: 28.8px;
+              padding-bottom: 36px;
+          }
+
+          .container-block_carts-inheat-price, .container-block_carts-inheat-color, .container-block_carts-inheat-size, .container-block_carts-inheat-quantity {
+              font-size: 22px;
+              line-height: 26.4px;
+              font-weight: 400;
+              text-transform: capitalize;
+              padding-top: 6px;
+              
+          }
+
+          .container-block_carts-inheat-price span {
+              color:#F16D7F;
+              text-transform: uppercase;
+          }
+
+          .container-block_carts-inheat-quantity-count {
+            position: absolute;
+            width: 44px;
+            height: 20px;
+            border: 1px solid #A4A4A4;
+            text-align: center;
+            padding-top: 4px;
+
+            margin-top: -26px;
+            margin-left: 120px;
+          }
+
+
+
+          .container-block_carts-stripped {
+            width: 652px;
+            height: 306px;
+            margin-top: 40px;
+            box-shadow: 0.4em 0.4em 5px rgba(122,122,122,0.5);
+
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .cart_button-clear {
+            width: 235px;
+            height: 50px;
+            border: 1px solid #A4A4A4;
+            background-color: transparent;
+            
+            text-transform: uppercase;
+            font-weight: 300;
+            font-size: 14px;
+        }
+
+        .cart_button-continue {
+            width: 225px;
+            height: 50px;
+            border: 1px solid #A4A4A4;
+            background-color: transparent;
+
+           text-transform: uppercase;
+            font-weight: 300;
+            font-size: 14px;
+        }
+
+        .cart-buttons {
+            display: flex;
+            justify-content: space-between;
+
+            margin-top: 72px;
+        }
 
           .container_block {
             margin-top: 64px;
@@ -818,7 +979,7 @@ button:active, button:focus {
             position:absolute;
             width: 360px;
             height: 214px;
-            bottom: 300px;
+            margin-top: 140px;
          }
 
          .container-block-information-cart_line {
@@ -830,18 +991,6 @@ button:active, button:focus {
              margin-top: 21px;
          }
           
-        .ontainer-block-information-cart_button {
-            width: 273px;
-            height: 50px;
-            background-color: #F16D7F;
-            font-weight: 300px;
-            color: white;
-            text-transform: uppercase;
-            font-size: 16px;
-            border: none;
-            margin-left: 44px;
-            margin-top: 42px;
-        }
 
         .container-block-information-cart_text {
             font-weight: 400;
@@ -897,7 +1046,7 @@ button:active, button:focus {
     outline: none;
 }
 
-          button[type="submit"] {
+          .e-mail_button button[type="submit"] {
             width:100px;
             height:49px;
             border-radius: 0 25px 25px 0;
@@ -1033,6 +1182,7 @@ input[type="radio"] {
       padding-left: 30px;
   }
 
+
   input[type="text"] {
       padding-left: 17px;
   }
@@ -1047,7 +1197,175 @@ input[type="radio"] {
     font-size: 13px;
     margin-top: 15px;
 }
-  
+
+.btn-outline-pink {
+    width: 211px;
+    height: 47px;
+    border: 1px solid #FF6A6A;
+    border-radius: 0px;
+    color:  #FF6A6A;
+    
+}
+
+.product_title  {
+    background-color: #F8F3F4;
+    width: 1600px;
+    height: 148px;
+    margin: 0 auto;
+}
+
+.product-title_text {
+font-weight: 400;
+font-size: 24px;
+color: #F16D7F;
+text-transform: uppercase;
+padding-top: 58px;
+position: relative;
+}
+
+.breadcrumb-item {
+    font-weight: 700;
+    font-size: 14px;
+    color: #636363;
+    text-transform: uppercase;
+    text-decoration: none; 
+}
+
+.breadcrumb-item:hover {
+    color: #F16D7F;
+}
+
+.breadcrumb-item:active {
+    color: #F16D7F;
+}
+
+.breadcrumb-div{
+    position: absolute;
+    margin-left: 1161px;
+    margin-top: -20px;    
+}
+
+
+.header_navigation_bootstrap {
+    display: none;
+}
+
+.section-carousel {
+    width: 1600px;
+    margin: 0 auto;
+    height: 777px;
+}
+
+.carousel-item-background {
+    width: 1600px;
+    height: 700px;
+    background-color: #F7F7F7;
+}
+
+.carousel-item-img{
+    width: 597px;
+    height: 700px;
+    display:block;
+    margin: 0 auto;
+}
+
+.card-womencol {
+    background-color:#FFFFFF;
+    border: 1px solid #F7F7F7;
+    width: 1141px;
+    height: 601px;
+    position: absolute;
+    z-index: 1;
+    margin-top: -100px;
+
+    text-align: center;
+    padding-left: 292px;
+    padding-right: 294px;
+    padding-top: 64px;
+}
+
+.dropdown-text {
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16.8px;
+    color: #636363;
+    text-decoration: none; 
+
+}
+
+
+
+.card-womencol_h1 {
+    text-transform: uppercase;
+    font-size: 14px;
+    color: #F16D7F;
+    font-weight: 300;
+    line-height:  16.8px;
+}
+
+.card-womencol_pink-band {
+    width: 63px;
+    height: 3px;
+    border: none;
+    background-color: #EF5B70;
+    margin-top: 12px;
+    margin-left: 0px;
+    margin-left: 250px;
+}
+
+.card-womencol_moschino {
+    text-transform: uppercase;
+    font-size: 18px;
+    color: #4D4D4D;
+    font-weight: 300;
+    line-height:  21.6px;
+    padding-top: 12px;
+
+}
+
+.card-womencol_text {
+    padding-top: 48.5px;
+    font-size: 14px;
+    color: #5E5E5E;
+    font-weight: 300;
+    line-height:  16.8px;
+}
+
+.card-womencol_price {
+    text-transform: uppercase;
+    font-size: 24px;
+    color: #EF5B70;
+    font-weight: 300;
+    line-height:  28.8px;
+    padding-top: 32px;
+    padding-bottom: 64px;
+}
+
+.card-womencol_gray-band {
+    width: 641px;
+    height: 0px;
+    border: 1px solid #EAEAEA;
+    margin-left: -40px;
+}
+
+.navbar {
+    padding-top: 65px;
+    margin-left: 60px;
+    padding-bottom: 49px;
+}
+
+.section_addcards {
+    position: relative;
+    margin-left: -240px;
+   margin-top: 644px;
+    width: 1116px; 
+}
+
+.footer-boost {
+    margin-top: -500px;
+}
+
 
  
 
@@ -1059,6 +1377,16 @@ input[type="radio"] {
 
     .circle {
        margin-left: 93.5%; 
+    }
+
+    .circleboots {
+        width: 19px;
+        height: 19px;
+        border-radius: 25px;
+        background: #F16D7F;
+        position: absolute;
+        margin-left: 707px;
+        margin-top: 21px;
     }
 
     .container {
@@ -1150,6 +1478,7 @@ input[type="radio"] {
          margin-left: 16px;
          margin-right: 16px;
          justify-content: space-around;
+         width: 768px;
      }
 
     .button_browse-div {
@@ -1190,7 +1519,7 @@ input[type="radio"] {
     justify-content: space-between;
     width: 145px;
     position: absolute;
-    padding-left: 280px;
+    margin-left: 280px;
     margin-top: -11px;
     }
 
@@ -1310,8 +1639,117 @@ input[type="radio"] {
     line-height: 19px;
 }
 
+.product_title {
+    width: 768px;
+}
 
-   
+.breadcrumb-div{
+    margin-left: 523px;
+}
+
+.section-carousel {
+    width: 768px;
+    height: 624px;
+}
+
+.carousel-item-background {
+    width: 768px;
+    height: 624px;
+}
+
+
+.carousel-item-img {
+    width: 466px;
+    height: 565px;
+}
+
+.card-womencol {
+    width: 768px;
+    height: 601px;
+    margin-top: 0px;
+    position: relative;
+
+    text-align: center;
+    padding-left: 106px;
+    padding-right: 107px;
+}
+
+.dropdown-text {
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16.8px;
+    color: #636363;
+    text-decoration: none; 
+
+}
+
+
+.section_addcards {
+    margin: 0 auto;
+    width: 768px; 
+    
+}
+
+.index-selection_photos-boost-none {
+    display: none;
+}
+
+.card-womencol_pink-band {
+    margin-left: 250px;
+}
+
+.container_block {
+    width: 768px;
+}
+
+.container-block_information {
+    width: 360px;
+    height: 400px;
+    float:right;
+    
+}
+
+.container-block_information-forms {
+   width: 360px;
+   height: 175px;
+}
+
+.container-block_carts {
+    float: left;
+
+    margin-left: 16px;
+} 
+
+.container-block_information{
+    width: 360px;
+    height: 400px;
+    float: left;
+
+    margin-left: 16px;
+    margin-top: 150px;
+    
+}
+
+.container-block-information_cart{
+
+    margin-top: -155px;
+    margin-left: 375px;
+
+}
+
+.container-block_carts-stripped, .container-block_carts-inheat{
+    width: 735px;
+}
+
+.cart-buttons {
+    margin-left: 100px;
+    margin-right: 50px;
+}
+
+.cart-height {
+    height: 1287px;
+}
 }
     
 @media (max-width: 767px) {
@@ -1321,6 +1759,16 @@ input[type="radio"] {
 
     .circle {
        margin-left: 91.5%; 
+    }
+
+    .circleboots {
+        width: 19px;
+        height: 19px;
+        border-radius: 25px;
+        background: #F16D7F;
+        position: absolute;
+        margin-left: 330px;
+        margin-top: 21px;
     }
 
     .header_button-mobile{
@@ -1451,6 +1899,7 @@ input[type="radio"] {
         .selection_addcart {
             margin: 0 auto;
             margin-left: 32px;
+            width: 375px;
         }
 
         .footer-back_img {
@@ -1508,10 +1957,156 @@ input[type="radio"] {
         
 
 
-       
+        .product_title {
+            width: 375px;
+        }
+
+        .product-title_text {
+            padding-top: 24px;
+            text-align: center;
+            }
+        
+        .breadcrumb-div{
+            margin: 0 auto;
+            padding-left: 83px;
+            padding-top: 32px;
+        }
+        
+        .section-carousel {
+            width: 375px;
+        }
+        
+        .carousel-item-background {
+            width: 375px;
+        }
+        
+        .carousel-item-img {
+            width: 374px;
+            height: 454px;
+        }
+        
+        .card-womencol {
+            width: 375px;
+            height: 600px;
+        
+            padding-left: 24px;
+            padding-right: 25px;
+        }
+
+        .card-womencol_pink-band {
+            margin-left: 130px;
+        }
+
+        .card-womencol_gray-band {
+            width: 174px;
+            margin-left: 80px;
+        }
+        
+        .dropdown-text{
+            font-size: 10px;
+            display: flex;
+            flex-wrap: nowrap;
+        }
+
+        .navbar {
+            width: 53%;
+            margin-top: 0%;
+            padding-top: 0%;
+            display: flex;
+        }
 
         
-    
-       
+        .index-selection_photos-boost-none-mob {
+            display: none;
+        }
+        
+        .index-selection_photos-boost-none {
+            display: block;
+        }
 
+        .container-block_carts-stripped, .container-block_carts-inheat{
+            width: 375px;
+            height: 188px;
+             margin-left: 80px;
+            
+        }
+
+        .container-block_carts-stripped img, .container-block_carts-inheat img{
+            width: 143px;
+            height: 188px;
+        }
+
+
+    
+
+        .container-block_carts-inheat-title {
+            text-transform: uppercase;
+            font-size:16px;
+            font-weight: 400;
+            line-height: 19px;
+            padding-bottom: 25px;
+        }
+
+        .container-block_carts-inheat-price, .container-block_carts-inheat-color, .container-block_carts-inheat-size, .container-block_carts-inheat-quantity {
+            font-size:14px;
+            line-height: 16.8px;
+            
+            padding-top: 4px;
+            
+        }
+
+        .container-block_carts-inheat-text, .container-block_carts-stripped-text{
+            width: 200px;
+            height: 188px;
+            padding-right: 13px;
+            padding-top: 22px;
+
+          }
+
+
+        .container-block_carts-inheat-quantity-count {
+            position: absolute;
+            width: 24px;
+            height: 12px;
+            padding-top: 2px;
+
+            margin-top: -16px;
+            margin-left: 105px;
+
+            font-size: 10px;
+        
+          }
+    
+    .cart_button-clear,  .cart_button-continue {
+            width: 175px;
+            height: 33px;
+            
+            font-size: 12px;
+            margin: 0 auto;
+        }
+
+.cart-buttons {
+    width: 375px;
+    margin-left: 85px;
+    margin-top: 30px;
+}
+
+.container-block_carts {
+    height:475px;
+}
+       
+       .registration-block-information_title{
+           width: 375px;
+                 }
+
+.registration-block-information_title {
+            font-size: 16px;
+          }
+         
+    
+
+         
+          
+
+ 
     }
